<resources>
    <string name="app_name">Blog</string>
    <string name="add_post">Add Post</string>
    <string name="settings">Settings</string>
    <string name="click_hereto_add_new_post">Click above to add new post</string>
    <string name="post_title">Post title…</string>
    <string name="post_description">Post description…</string>
    <string name="submit_post">Submit Post</string>
    <string name="loading">loading…</string>

    <string name="uploadingBlog">"Posting to Blog…"</string>
    <string name="uploadingUserData">"Uploading data… \n Please wait"</string>
    <string name="logOut">Log Out</string>
    <string name="or">OR</string>
    <string name="manyMore"> + many more…</string>
    <string name="blogimage">BlogImage</string>
    <string name="blog_title">Blog Title</string>
    <string name="delete_post">Delete Post</string>
    <string name="blog_description">Blog Description</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_e_mail_address">Enter E-mail address</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an account? Sign Up?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account_sign_in">Have an account ? Sign In!</string>
    <string name="finish_setup">Finish SetUp</string>
    <string name="username">username</string>
    <string name="likebutton">likeButton</string>
    <string name="number_of_like">number Of Like</string>
    <string name="currentdate">currentDate</string>
    <string name="date">date</string>
</resources>
