<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView

                android:id="@+id/profile_image"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/d" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.7"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/post_image_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/blogimage"
            android:src="@drawable/d" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/post_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/likebutton"
                android:src="@drawable/ic_thumb_up_black_18dp" />

            <TextView
                android:id="@+id/likeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:paddingStart="1dp"
                android:paddingEnd="15dp"
                android:text="@string/number_of_like" />

        </LinearLayout>

        <TextView
            android:id="@+id/post_title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/post_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_desc_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:text="@string/post_description" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">


            <TextView
                android:id="@+id/currentDate"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:alpha="0.5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/currentdate"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:paddingStart="15dp"
                android:textColor="@android:color/black"
                android:alpha="0.5"
                android:paddingEnd="15dp"
                android:text="@string/date"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>