<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogSingleActivity">

    <TextView
        android:id="@+id/blogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_description"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blogTitle" />

    <ImageView
        android:id="@+id/blogImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder"
        android:contentDescription="@string/blogimage" />

    <TextView
        android:id="@+id/blogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blog_title"
        android:textColor="@android:color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blogImage" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/delete_post"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>