<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity"
    android:fillViewport="true"
    android:background="#0488d1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/enterConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:autofillHints="@string/enter_password"
        android:backgroundTint="@android:color/white"
        android:background="@drawable/rounded_corner_categories"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/enterPasswordSignUp"
        app:layout_constraintStart_toStartOf="@+id/enterPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordSignUp" />

    <EditText
        android:id="@+id/enterNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:ems="10"
        android:backgroundTint="@android:color/white"
        android:background="@drawable/rounded_corner_categories"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/enter_name"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/enterEmailSignUp"
        app:layout_constraintStart_toStartOf="@+id/enterEmailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailSignUp" />

    <EditText
        android:id="@+id/enterEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/enter_e_mail_address"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="@string/enter_e_mail_address" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="185dp"
        android:text="@string/sign_up"
        android:textSize="55sp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="@android:color/white"
        android:autofillHints="@string/enter_password"
        app:layout_constraintEnd_toEndOf="@+id/enterNameSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enterNameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/enterNameSignUp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterConfirmPasswordSignUp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <TextView
        android:id="@+id/alreadyHaveAnAccountSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>