<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.SetUpActivity">

    <ImageButton
        android:id="@+id/setUpImageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder"
        android:contentDescription="@string/blogimage" />

    <EditText
        android:id="@+id/setUpNameField"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/rounded_corner_categories"
        android:backgroundTint="#E1E9ED"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setUpImageButton"
        android:autofillHints="@string/enter_name" />

    <Button
        android:id="@+id/setUpSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:backgroundTint="#0488d1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/finish_setup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setUpNameField"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>